<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2014 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- The user visible name of the application. [CHAR LIMIT=20] -->
    <string name="application_name">ExoPlayer Demo</string>
    <string name="enable_background_audio">Play in background</string>
    <string name="video">Video</string>
    <string name="audio">Audio</string>
    <string name="text">Text</string>
    <string name="logging">Logging</string>
    <string name="logging_normal">Normal</string>
    <string name="logging_verbose">Verbose</string>
    <string name="retry">Retry</string>
    <string name="off">[off]</string>
    <string name="on">[on]</string>
    <string name="drm_not_supported">Protected content not supported on API levels below 18</string>
    <string name="failed">Playback failed</string>
    <string name="title_activity_main">DashSync</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="s_adr">Server Address</string>
    <string name="s_key">Session Key</string>
    <string name="play_text">Play Video</string>
    <string name="title">Video</string>
    <string name="default_sID">13</string>
    <string name="media">Add Media</string>
    <string name="session">Pick Session</string>
    <string name="dbg">Show Debug</string>

</resources>