<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="mf.at.itec.gui.MainActivity" >

    <LinearLayout
        android:id="@+id/row1_main"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/videoTV_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:width="120dp" />

        <Spinner
            android:id="@+id/fileChooser_main"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row2_main"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/sessionKeyTV_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s_key"
            android:width="120dp" />

        <EditText
            android:id="@+id/sessionKeyET_main"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:text="@string/default_sID" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row3_main"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/serverAddressTV_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s_adr"
            android:width="120dp" />

        <EditText
            android:id="@+id/serverAddressET_main"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:text="" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/sDebug"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="show debug"
        android:visibility="visible" />
    <Button
        android:id="@+id/altMedia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="add alternative media"
        android:visibility="visible" 
        android:onClick="altMedia"/>

    <Button
        android:id="@+id/openButton_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="onOpenButtonClick"
        android:text="@string/play_text" />

</LinearLayout>